# sandbox

ka-chat-bot/: .gitignore  Makefile  README.md  chat_database.py  deploy.sh  env.example  main.py  models.py  pyproject.toml  requirements.txt  run_agent.py  run_agent_v2.py  run_toolnode.py
ka-chat-bot/agent_build/: Untitled.ipynb  __init__.py  agents.py  compile.py  config.py  deploy_model.py  mlflowlogger.py  utils.py
ka-chat-bot/agent_build_v2/: deploy_model.py  mlflowlogger.py  run_toolnode.py
ka-chat-bot/frontend/build-chat-app/: asset-manifest.json  index.html
ka-chat-bot/frontend/build-chat-app/static/js/: main.14f6b4a4.js  main.14f6b4a4.js.map
ka-chat-bot/frontend/src/: config.ts
ka-chat-bot/frontend/src/api/: chatApi.ts
ka-chat-bot/frontend/src/components/: ChatMessage.tsx  FeedbackPopup.tsx  Sidebar.tsx
ka-chat-bot/frontend/src/context/: ChatContext.tsx
ka-chat-bot/frontend/src/types/: index.ts
ka-chat-bot/utils/: config.py  data_utils.py  message_handler.py  request_handler.py  setup_database_schema.py  streaming_handler.py
